# Grok3API

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  update_models.py
.github/workflows/: release.yml
docs/: build.txt
docs/En/: askDoc.md
docs/Ru/: RuReadMe.md  askDoc.md
docs/proto/: auth_frontend.proto  chat.proto  connectors_manager.proto  grok_api.proto  grok_api_v2.proto
grok3api/: client.py  driver.py  history.py
grok3api/clients/: BaseGrokClient.py
grok3api/types/: __init__.py  pb_meta.py  request.py  response.py  response_chunk.py
grok3api/types/exceptions/: __init__.py  exceptions.py  handle.py
grok3api/types/proto/: __init__.py  auth_frontend.py  chat.py  connectors_manager.py  shared.py
grok3api/utils/: constants.py  meta_utils.py  parse_response.py  pb_serializer.py  protobuf.py
grok3api/utils/api/: anon_session.py  castle_token.py
tests/: chat.py  example.py  reg_test.py
