[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Grok3API"
version = "0.2.0a4"
description = "Async Python client for Grok mobile gRPC API"
authors = [{ name = "boykopovar", email = "boykopovar@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["aiohttp>=3.9", "coincurve"]
keywords = ["grok3api", "grok 3 api", "grok api", "grok3api python", "grok ai", "unofficial grok3api api", "async"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/boykopovar/Grok3API"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["grok3api*"]